# chatgpt2api

./: .codegraphignore  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGNES_AI_INTEGRATION_SUMMARY.md  AI_PLAYBOOK.md  Dockerfile  Dockerfile.lite  HUONG_DAN.md  README.md  README.vi.md  README_ChatGPT2API.md  README_ChatGPT2API.vi.md  README_VN_MCP_HUB.md  README_VN_MCP_HUB.vi.md  config.json  docker-compose.lite.yml  docker-compose.yml  pyproject.toml  repository.yaml  test_out.txt  test_strip.py  test_strip_full.py  test_strip_full_out.txt
.claude/: settings.json
android-ai-avatar/: package-lock.json  package.json
api/: accounts.py  ai.py  app.py  app_lite.py  captcha_proxy.py  channels.py  claude.py  gemini_web.py  image_tasks.py  mcp.py  mcp_admin.py  oauth.py  support.py  system.py  teacher.py  veo_video.py  voice.py  (+1 more)
captcha-solver/: .dockerignore  README.md  README.vi.md  pyproject.toml  requirements.txt  sniff_flow.py  test_onboard.py
captcha-solver/src/: accounts_db.py  auto_login.py  browser_pool.py  capture_body.py  capture_real_body.py  capture_real_v2.py  capture_route.py  chatgpt_login.py  claude_web_login.py  cli.py  codex_google_onboard.py  debug_fetch.py  debug_fetch2.py  find_api_fields.py  gemini_web_login.py  github_codex_onboard.py  log_requests.py  main.py  probe_api.py  probe_api_v2.py  settings.py  test_flow.py
captcha-solver/src/solvers/: browser_run.py  chatgpt_web.py  flow_google.py  flow_google.py.bak  gemini_web.py  model_tracker.py  recaptcha.py  turnstile.py  twocaptcha.py
vn-mcp-hub/: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
vn-mcp-hub/data/dien_nuoc/: co_ban.md
vn-mcp-hub/data/giao_duc/: co_ban.md
vn-mcp-hub/data/khoa_hoc/: co_ban.md
vn-mcp-hub/data/ngoai_ngu/: tieng_anh.md
vn-mcp-hub/data/tu_nhien/: co_ban.md
vn-mcp-hub/data/xa_hoi/: co_ban.md
vn-mcp-hub/data/y_te/: co_ban.md
vn-mcp-hub/src/: __init__.py  dns_cache.py  main.py  mcp_validator.py  sources_config.py  studio.py  studio_html.py
vn-mcp-hub/src/general/: __init__.py  arxiv.py  fs_remote.py  ssh_exec.py  web_agent.py  web_reader.py  wikipedia.py  youtube.py
vn-mcp-hub/src/ha/: __init__.py  helper.py
vn-mcp-hub/src/kb/: __init__.py  dien_nuoc.py  giao_duc.py  hybrid_search.py  khoa_hoc.py  ngoai_ngu.py  quality.py  tu_nhien.py  writeback.py  xa_hoi.py  y_te.py
vn-mcp-hub/src/rag/: __init__.py  cloud.py  hybrid.py  ingest.py  meta.py  retriever.py  scheduler.py  settings.py  telegram_bot.py
vn-mcp-hub/src/search/: __init__.py  brave.py  crossref.py  internet_archive.py  limiter.py  mojeek.py  openalex.py  orchestrator.py  orchestrator_mcp.py  pubmed.py  semantic_scholar.py
vn-mcp-hub/src/vn/: __init__.py  currency.py  law.py  lunar.py  news.py  petrol.py  phat_nguoi.py  search.py  stock.py  vn_districts.json  weather.py
(+430 files in other folders)
