[project]
name = "vn-mcp-hub"
version = "0.1.0"
description = "Vietnam MCP Hub — 16 custom MCP servers for chatgpt2api"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "lunarcalendar>=0.0.9",
    "youtube-transcript-api>=0.6.2",
    "chromadb>=0.5.0",
    "fastembed>=0.4.0",
    "lxml>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
